tests/machine/x/cpp/group_by_sort.error
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:61:12: error: ‘i’ was not declared in this scope
   61 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:61:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:64:36: error: ‘struct Grouped’ has no member named ‘cat’
   64 |   decltype(std::declval<Grouped>().cat) key;
      |                                    ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:64:36: error: ‘struct Grouped’ has no member named ‘cat’
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:21: error: no match for ‘operator==’ (operand types are ‘int’ and ‘std::__cxx11::basic_string<char>’)
  121 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 int    std::__cxx11::basic_string<char>
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:3:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::pair<_T1, _T2>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::fpos<_StateT>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::allocator<_CharT>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const _CharT*’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::tuple<_UTypes ...>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::istreambuf_iterator<_CharT, _Traits>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:4:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::map<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:7:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:121:24: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘int’
  121 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:122:39: error: cannot convert ‘Item’ to ‘int’ in initialization
  122 |           __g.items.push_back(Grouped{i});
      |                                       ^
      |                                       |
      |                                       Item
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:128:74: error: cannot convert ‘Item’ to ‘int’ in initialization
  128 |         __groups.push_back(__struct3{__key, std::vector<Grouped>{Grouped{i}}});
      |                                                                          ^
      |                                                                          |
      |                                                                          Item
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:128:76: error: no matching function for call to ‘std::vector<Grouped>::vector(<brace-enclosed initializer list>)’
  128 |         __groups.push_back(__struct3{__key, std::vector<Grouped>{Grouped{i}}});
      |                                                                            ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Grouped; _Alloc = std::allocator<Grouped>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; allocator_type = std::allocator<Grouped>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; std::__type_identity_t<_Alloc> = std::allocator<Grouped>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; allocator_type = std::allocator<Grouped>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; allocator_type = std::allocator<Grouped>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; std::__type_identity_t<_Alloc> = std::allocator<Grouped>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; size_type = long unsigned int; value_type = Grouped; allocator_type = std::allocator<Grouped>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; size_type = long unsigned int; allocator_type = std::allocator<Grouped>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Grouped; _Alloc = std::allocator<Grouped>; allocator_type = std::allocator<Grouped>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Grouped; _Alloc = std::allocator<Grouped>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:136:63: error: ‘struct Grouped’ has no member named ‘val’
  136 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                               ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:136:63: error: ‘struct Grouped’ has no member named ‘val’
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:136:67: error: template argument 1 is invalid
  136 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                                   ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:136:67: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:138:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  138 |                    __items.push_back(x.val);
      |                            ^~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:138:40: error: ‘struct Grouped’ has no member named ‘val’
  138 |                    __items.push_back(x.val);
      |                                        ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:134:80:   required from here
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:134:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  134 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                    ~~^~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:134:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  134 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                               ~~^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:146:63: error: ‘struct Grouped’ has no member named ‘val’
  146 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                               ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:146:63: error: ‘struct Grouped’ has no member named ‘val’
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:146:67: error: template argument 1 is invalid
  146 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                                   ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:146:67: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:148:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  148 |                    __items.push_back(x.val);
      |                            ^~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:148:40: error: ‘struct Grouped’ has no member named ‘val’
  148 |                    __items.push_back(x.val);
      |                                        ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:145:18:   required from here
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:144:43: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  144 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                         ~~^~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:144:54: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  144 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                    ~~^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:133:24: error: no matching function for call to ‘std::vector<std::pair<double, __struct4> >::push_back(<brace-enclosed initializer list>)’
  133 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  134 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  135 |                ([&]() {
      |                ~~~~~~~~ 
  136 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  137 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  138 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  139 |                  }
      |                  ~      
  140 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  141 |                })())),
      |                ~~~~~~~  
  142 |            __struct4{
      |            ~~~~~~~~~~   
  143 |                g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~
  144 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  145 |                })(([&]() {
      |                ~~~~~~~~~~~
  146 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  147 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  148 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  149 |                  }
      |                  ~      
  150 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  151 |                })())}});
      |                ~~~~~~~~ 
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<double, __struct4>; _Alloc = std::allocator<std::pair<double, __struct4> >; value_type = std::pair<double, __struct4>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<double, __struct4> >::value_type&’ {aka ‘const std::pair<double, __struct4>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<double, __struct4>; _Alloc = std::allocator<std::pair<double, __struct4> >; value_type = std::pair<double, __struct4>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<double, __struct4> >::value_type&&’ {aka ‘std::pair<double, __struct4>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_VMValid_Goldengroup_by_sort2448763331/001/prog.cpp:159:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<Grouped>’ requested
  115 |   std::vector<Grouped> grouped = ([&]() {
      |                                  ~~~~~~~~
  116 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  117 |     for (auto i : items) {
      |     ~~~~~~~~~~~~~~~~~~~~~~
  118 |       auto __key = i.cat;
      |       ~~~~~~~~~~~~~~~~~~~
  119 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  120 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  121 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  122 |           __g.items.push_back(Grouped{i});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  123 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  124 |           break;
      |           ~~~~~~
  125 |         }
      |         ~
  126 |       }
      |       ~
  127 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  128 |         __groups.push_back(__struct3{__key, std::vector<Grouped>{Grouped{i}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  129 |       }
      |       ~
  130 |     }
      |     ~
  131 |     std::vector<std::pair<double, __struct4>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  132 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  133 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  134 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  135 |                ([&]() {
      |                ~~~~~~~~
  136 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  137 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  138 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  139 |                  }
      |                  ~
  140 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  141 |                })())),
      |                ~~~~~~~
  142 |            __struct4{
      |            ~~~~~~~~~~
  143 |                g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~
  144 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  145 |                })(([&]() {
      |                ~~~~~~~~~~~
  146 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  147 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  148 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  149 |                  }
      |                  ~
  150 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  151 |                })())}});
      |                ~~~~~~~~~
  152 |     }
      |     ~
  153 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  155 |     std::vector<__struct4> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  156 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  157 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  158 |     return __res;
      |     ~~~~~~~~~~~~~
  159 |   })();
      |   ~~^~
